# failure-propagation-and-rca-via-energy-minimization

./: .env.example  .gitignore  README.md  benchmark_extraction_results.csv  bug_status.csv  buggy_method_presence.csv  exp_design.md  extraction_benchmark.csv  ground_truth.csv  implementation.md  main.py  pyproject.toml  results_topk.csv  top_k_details.csv  txt.txt
docs/: ground_truth_tagging.md
notebooks/: BenchmarkSBFL.ipynb  SBFL.ipynb  SamplingCuts.ipynb  Untitled.ipynb  Visualizations.ipynb  analysis_notebook_export.csv  interactive_exploration.py  sbfl-analysis.ipynb  systematic_benchmark_analysis.py
notebooks/eval_results/: Chart_11_1.0.csv  Chart_13_1.0.csv  Chart_1_1.0.csv  Chart_20_1.0.csv  Chart_24_1.0.csv  Chart_3_1.0.csv  Chart_6_1.0.csv  Chart_8_1.0.csv
scripts/: analyze_benchmark_results.py  analyze_graph_metrics_correlation.py  check_buggy_method_presence.py  extract_rca_eval_graphs.py  extract_sbfl_pregen.py  run_analysis.py  run_benchmark_pregen.py  run_evaluation.py  run_pregenerated_folder.py  run_rca_experiments.py  run_sampling_cuts.py  run_sbfl_experiments.py  validate_buggy_methods.py
scripts/benchmarking/: benchmark_extraction.py
src/benchmarking/: d4j_manager.py  download_rca_eval.py  gzoltar_manager.py  sbfl_metrics.py
src/cut_algorithms/: boykov_jolly.py  data_parsers.py  normalized_cuts.py
src/evaluation/: analyzer.py  baselines_rca.py  benchmark_reader.py  benchmark_runner.py  config.py  d4j_eval.py  rca_eval.py  sbfl_baselines.py
tests/: test_args.py  test_generated_callgraphs.py  test_synthetic_sbfl.py
(+804 files in other folders)
