[project]
name = "failure-propagation-and-rca-via-energy-minimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "notebook>=7.5.7",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
