[project]
name = "failure-propagation-and-rca-via-energy-minimization"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fse-baro>=0.2.2",
    "jupyter>=1.1.1",
    "kaleido>=1.3.0",
    "matplotlib>=3.11.0",
    "networkx>=3.6.1",
    "notebook>=7.5.7",
    "numpy<2.0.0",
    "pandas>=2.2.0,<3.0.0",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tqdm>=4.68.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
